[gd_scene load_steps=11 format=3 uid="uid://bij56wdjuhu7w"]

[ext_resource type="Script" path="res://scenes/reel.gd" id="1_41fk6"]
[ext_resource type="Texture2D" uid="uid://cvftw1d7h78tp" path="res://assets/sprites/reels.png" id="1_g45gf"]
[ext_resource type="Script" path="res://state_machine/reel/finite_state_machine.gd" id="3_s3jk6"]
[ext_resource type="Script" path="res://state_machine/reel/state_slowing.gd" id="4_w5v3g"]
[ext_resource type="Script" path="res://addons/ninetailsrabbit.fsm/src/machine_state.gd" id="5_nyg2g"]
[ext_resource type="Script" path="res://state_machine/reel/state_spinning.gd" id="5_yeyvu"]
[ext_resource type="Script" path="res://state_machine/reel/state_stop_requested.gd" id="7_k2wme"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vvvmr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3qu5g"]
texture = SubResource("CanvasTexture_vvvmr")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hfelu"]

[node name="Reel" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 120.0
script = ExtResource("1_41fk6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3qu5g")

[node name="Fruits" type="Node2D" parent="."]
material = SubResource("CanvasItemMaterial_hfelu")
position = Vector2(9, -40)

[node name="Fruit1" type="Sprite2D" parent="Fruits"]
position = Vector2(16, 20)
scale = Vector2(2, 2)
texture = ExtResource("1_g45gf")
hframes = 3
vframes = 3

[node name="Fruit2" type="Sprite2D" parent="Fruits"]
position = Vector2(16, 60)
scale = Vector2(2, 2)
texture = ExtResource("1_g45gf")
hframes = 3
vframes = 3

[node name="Fruit3" type="Sprite2D" parent="Fruits"]
position = Vector2(16, 100)
scale = Vector2(2, 2)
texture = ExtResource("1_g45gf")
hframes = 3
vframes = 3

[node name="Fruit4" type="Sprite2D" parent="Fruits"]
position = Vector2(16, 140)
scale = Vector2(2, 2)
texture = ExtResource("1_g45gf")
hframes = 3
vframes = 3

[node name="StopSound" type="AudioStreamPlayer" parent="."]

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("reel", "current_state")]
script = ExtResource("3_s3jk6")
reel = NodePath("..")
current_state = NodePath("Stopped")

[node name="Slowing" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_w5v3g")

[node name="Spinning" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_yeyvu")

[node name="Stopped" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_nyg2g")

[node name="StopRequested" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_k2wme")
